# csgrs-holed-cubiod

./: .gitignore  Cargo.toml  README.md  box-with-tri-hole.FCStd  holed-cuboid_l-20.00_w-20.00_h-5.00_s-3_d-5.00.3mf  holed-cuboid_w-10.00_l-100.00_h-5.00.stl  holed-cuboid_w-10.00_l-20.00_h-5.00.stl  holed-cuboid_w-10.00_l-20.00_h-5.00_d-5.00.stl
src/: main.rs
